--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": ">=7.2.9 || ^8.0",
+        "php": "7.4 || 8.0",
         "bobdenotter/configuration-notices": "^1.2",
         "bobdenotter/weatherwidget": "^1.1",
         "bolt/article": "^1.1",
@@ -13,7 +13,8 @@
         "bolt/themes": "^3.5",
         "nelmio/security-bundle": "^2.10",
         "symfony/flex": "^1.17",
-        "symfony/maker-bundle": "^1.36"
+        "symfony/maker-bundle": "^1.36",
+        "ext-json": "*"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
